# Tetra-Engine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
script/: install_cmake.sh  install_criterion.sh  install_depends.sh
src/private/core/: main.cpp
tests/testing/: basics_tests.cpp
tests/tools/: report_hock.cpp
